<resources>
    <string name="app_name">Baking App</string>

    <string name="recipe_bundle">recipe</string>
    <string name="recipe_name_bundle">recipe_name</string>
    <string name="steps_bundle">steps</string>
    <string name="step_position_bundle">step_position</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>

    <string name="no_internet_message">No internet access. Please check connection</string>
    <string name="no_recipes_text_message">No recipe list returned. Please check your link.</string>
    <string name="not_recent_recipes_text_message">No recent recipe found. Please open app and start looking for tasty stuff</string>
    <string name="appwidget_text">@string/app_name</string>
    <string name="add_widget">Add widget</string>

    <string name="widget_recipe_name_for_widget_key">widget_recipe</string>
    <string name="widget_recipe_name_default">@string/app_name</string>
    <string name="widget_ingredients_list_for_widget_key">widget_ingredients</string>

    <string name="settings_menu_name">show on widget</string>

    <string name="instructions_tab_name">Instructions</string>
    <string name="ingredients_tab_name">Ingredients</string>

</resources>
